<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor"
    tools:context=".Activity.Update_Servico">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/tela_de_servi_o"
        android:textColor="?attr/textcolor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_up_nome_ser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome_do_cliente"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint" />

    <EditText
        android:id="@+id/txt_up_titulo_ser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/titulo_do_servi_o"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint" />

    <EditText
        android:id="@+id/txt_date_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/data_do_pedido"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkOne_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:text="@string/site" />

        <CheckBox
            android:id="@+id/checkTwo_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:text="@string/desktop" />

        <CheckBox
            android:id="@+id/checkThree_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:text="@string/mobile" />

        <CheckBox
            android:id="@+id/checkFour_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:text="@string/infraestrutura" />

        <CheckBox
            android:id="@+id/checkFive_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:text="@string/banco_de_dados" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_up_obs_text"
            android:layout_width="235dp"
            android:layout_height="138dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="bottom|start|end"
            android:hint="@string/deixei_suas_observa_es_sobre_o_pedido"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Enviar_up_Ser"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/aceitar_pedido" />

        <Button
            android:id="@+id/btn_up_ser_Cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textColor="?attr/textcolor"
            android:text="@string/voltar" />
    </LinearLayout>

</LinearLayout>