<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:orientation="vertical">

    <Switch
        android:id="@+id/idSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="?attr/textcolor"
        android:text="@string/dark_mode" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/menu"
        android:textColor="?attr/textcolor"
        android:textSize="32sp" />


    <Button
        android:id="@+id/btnCliente"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/cliente"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#00BCD4" />

    <Button
        android:id="@+id/btnService"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/servi_os"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#00BCD4" />

    <Button
        android:id="@+id/btnSobre"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/sobre"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#00BCD4" />


</LinearLayout>