<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor"
    tools:context=".Activity.Cadastrar_Cliente">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/cadastro_cliente"
        android:textColor="?attr/textcolor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_reg_cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="CPF"
        android:inputType="textPersonName"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint" />

    <EditText
        android:id="@+id/txt_reg_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome_completo"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint" />

    <EditText
        android:id="@+id/txt_reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint"
        android:maxLength="150"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txt_reg_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/endere_o"
        android:inputType="text"
        android:maxLength="150"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint" />

    <EditText
        android:id="@+id/txt_reg_tell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/_00_00000_0000"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_reg_Enviar_cli"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/cadastrar" />

    <Button
        android:id="@+id/btn_up_Cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/cancelar"
        android:textColor="?attr/textcolor" />
</LinearLayout>