<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Ver_Cliente">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/nome_completo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="99dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/endere_o"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/telefone"
            android:textColor="#000000" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyCliente"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>