<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/bem_vindoo"
        android:textColor="?attr/textcolor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/CPF"
        android:inputType="textPersonName"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint" />


    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:autofillHints=""

        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hint"/>

    <Button
        android:id="@+id/btnlogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/Enviar"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#00BCD4" />

    <Button
        android:id="@+id/btnRegistro"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:textColor="?attr/textcolor"
        android:text="Registrar" />
</LinearLayout>